# brain

./: .gitignore  README.md  content-lastmods.json  deploy-shards.toml  go.mod  go.sum  hugo.toml  tago.toml
.github/workflows/: daily-release.yml  deploy-cloudflare.yml  deploy-cloudflare.yml.disabled  deploy-tago.yml  pages.yml
.wrangler/cache/: pages.json
assets/: _custom.scss  _variables.scss
assets/css/: custom.css
content/docs/: _index.md
content/en/: _index.md  calendar.md  graph.md  tree.md
content/ja/: _index.md
content/vi/: _index.md
content/zh/: _index.md
i18n/: vi.yaml
layouts/: baseof.html  home.html  term.html
layouts/_markup/: render-passthrough.html
layouts/_partials/: breadcrumb.html  feed-item.html  navbar-title.html  navbar.html  sidebar.html
layouts/calendar/: single.html
layouts/docs/: home.html  list.html  single.html
layouts/graph/: single.html
layouts/taxonomy/: list.html  tag.html  term.html  (+1 more)
scripts/: add_frontmatter.py  add_tags.py  add_weights.py  brain_on.sh  fix_cf_descriptions.py  fix_chatgpt.py  fix_codeforces_index.py  fix_codelang.py  fix_content.py  fix_frontmatter.py  fix_katex.py  fix_kvant_index.py  fix_lc_descriptions.py  fix_math_blanklines.py  fix_mathdelim.py  generate_vocab_pages.sh  rewrite_github_pages_base.py  split_cloudflare_pages_shards.py
scripts/translate/: .gitignore  pyproject.toml  setup_repos.sh
scripts/translate/.wrangler/cache/: pages.json
scripts/translate/src/brain_translate/: __init__.py  cli.py  config.py  detect.py  models.py  publisher.py  state.py  translator.py
(+48769 files in other folders)
